--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test:firefox": "npx playwright test --project=firefox",
     "test:webkit": "npx playwright test --project=webkit",
     "test:e2e": "npx playwright test --config=e2e.config.ts --project=chromium",
-    "test:e2ePO": "npx playwright test --config=e2e-page-object.config.ts --project=chromium"
+    "test:e2ePO": "npx playwright test --config=e2e-page-object.config.ts --project=chromium",
+    "test:visual": "npx playwright test --config=visual.config.ts --project=chromium"
   },
   "author": "",
   "license": "ISC",
