--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test:webkit": "npx playwright test --project=webkit",
     "test:e2e": "npx playwright test --config=e2e.config.ts --project=chromium",
     "test:e2ePO": "npx playwright test --config=e2e-page-object.config.ts --project=chromium",
-    "test:visual": "npx playwright test --config=visual.config.ts --project=chromium"
+    "test:visual": "npx playwright test --config=visual.config.ts --project=chromium",
+    "test:visual-update": "npx playwright test --config=visual.config.ts --project=chromium --update-snapshots",
+    "test:api": "npx playwright test --config=api.config.ts --project=chromium"
   },
   "author": "",
   "license": "ISC",
